# kompact

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  accuracy_preservation.py  compression_ratio.py  headroom_proxy.py  llmlingua_proxy.py  run_comparison.py  run_dataset_eval.py  run_e2e_eval.py
benchmarks/suite/: __init__.py  baselines.py  custom_metrics.py  datasets.py  evaluators.py  fixture_generators.py  metrics.py  systems.py
docs/: architecture.md  benchmarks.md  harness-engineering-learnings.md  prd.md  quality.md  sdd.md
docs/research/: competitive-landscape.md  compression-techniques.md  economics.md
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: kompact.json
monitoring/grafana/provisioning/dashboards/: default.yml
src/kompact/: __init__.py  __main__.py  config.py  types.py
src/kompact/cache/: store.py
src/kompact/metrics/: telemetry.py  tracker.py
src/kompact/parser/: messages.py
src/kompact/proxy/: server.py
src/kompact/transforms/: cache_aligner.py  code_compressor.py  content_compressor.py  html_stripper.py  json_crusher.py  log_compressor.py  observation_masker.py  pipeline.py  schema_optimizer.py  toon.py
tests/: test_artifact_index.py  test_cache_aligner.py  test_content_compressor.py  test_html_stripper.py  test_json_crusher.py  test_observation_masker.py  test_pipeline.py  test_proxy_server.py  test_schema_optimizer.py  test_toon.py
tests/fixtures/: api_responses.json  code_files.py  log_outputs.txt  search_results.json
