[project]
name = "kompact"
version = "0.3.0"
description = "Multi-layer context optimization proxy for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "click>=8.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.40b0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
code = ["tree-sitter>=0.23.0", "tree-sitter-python>=0.23.0"]
schema = ["sentence-transformers>=3.0.0"]
bench = [
    "context-bench>=0.1.0",
    "datasets>=4.5.0",
    "headroom-ai>=0.3.0",
    "llmlingua>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
]

[project.scripts]
kompact = "kompact.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kompact"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["F401", "F541", "UP006", "UP017", "UP035", "UP045", "E501"]
